--- a/packages/dashboard/public/index.html
+++ b/packages/dashboard/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
-    <div id="_dashboard-dev-root"></div>
-  </body>
+
+<head>Dashboard</head>
+
+<body>
+  <div id="_dashboard-dev-root"></div>
+</body>
+
 </html>
