--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>Container</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
